NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -31,6 +31,34 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit Connector: Import Git Repositories</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Gerrit connector extends the EGit import wizard (File > Import > Projects from Git). A listing of all Git repositories from configured Gerrit repositories is provided to support simple cloning and importing of projects.</p>
+		<p><img border="0" src="images/3.7/gerrit-import.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Tasks Framework: Open Multiple Tasks</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The open task dialog (Ctrl+F12) support opening multiple tasks.</p>
+		<p><img border="0" src="images/3.7/open-multiple-tasks.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector: Links Open in Builds Editor</b></p>
 		</td>
 		<td valign="top" width="85%">
