RESOLVED - bug 372705: publish New & Noteworthy for Mylyn 3.7 https://bugs.eclipse.org/bugs/show_bug.cgi?id=372705

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -28,6 +28,8 @@
 
 <hr size="1"/>
 
+No builds have been published, yet. Stay tuned.
+<!-- 
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
@@ -44,6 +46,7 @@
 		</td>
 	</tr>
 </table>
-
+ -->
+ 
 </body>
 </html>
