RESOLVED - bug 375060: [release] plan Mylyn 3.7.1 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=375060

--- a/new/new.html
+++ b/new/new.html
@@ -28,12 +28,12 @@
 		</font></td>
 	</tr>
 	<tr>
-		<td bgcolor="#FAF7FB"><font size="1">3.7<br>
+		<td bgcolor="#E0D0E6"><font size="1">3.7<br>
 		<i>March 21,&nbsp;2012</i></font></td>
-		<td bgcolor="#FAF7FB" align="center">
+		<td bgcolor="#E0D0E6" align="center">
 		<a href="/mylyn/doc/plan-3.7.html">
 		<font size="1">341</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1">Kevin Sawicki contributed several UI enhancements for the Gerrit and Hudson connectors and Torkild U. Resheim provided Wiki markup to EPUB conversion support. 
+		<td bgcolor="#E0D0E6"><font size="1">Kevin Sawicki contributed several UI enhancements for the Gerrit and Hudson connectors and Torkild U. Resheim provided Wiki markup to EPUB conversion support. 
 		Additional contributions were provided by Manuel Doninger, Robert Munteanu, Thomas Ehrnhoefer, Tomasz Zarna, Abner Ballardo, Jan Mauersberger, Nicolas Bros, Igor Malinin, John Arthorne, Patrick Boisclair, Mike Wu, 
 		Maarten Meijer and Christian Trutz.
 			<br>Includes: 
