RESOLVED - bug 375060: [release] plan Mylyn 3.7.1 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=375060

--- a/new/new.html
+++ b/new/new.html
@@ -15,7 +15,7 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.7.1<br>
 		<i>April 25, 2012</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<font size="1">14</font><br><font size="1">bugs</font></td>
+		<font size="1">16</font><br><font size="1">bugs</font></td>
 		<td bgcolor="#FAF7FB"><font size="1">Service release.
 			<br>Includes: 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.7.1">Mylyn 3.7.1</a>, 
@@ -23,6 +23,7 @@
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.7.1">Mylyn Commons 3.7.1</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.7.1">Mylyn Context 3.7.1</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.6.1">Mylyn Docs 1.6.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=0.9.1">Mylyn Reviews 0.9.1</a>.
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.7.1">Mylyn Tasks 3.7.1</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.9.1">Mylyn Versions 0.9.1</a>.
 		</font></td>
