NEW - bug 373167: [release] plan Mylyn 3.8 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=373167

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -215,6 +215,9 @@
 					markup file and select <i>WikiText > Generate EPUB</i> in order to
 					start the wizard.
 				</p>
+                                <ul>
+                                  <li><a href="http://www.youtube.com/watch?v=kdcDMmx2ohY" target="_new">Watch a video</a>
+                                </ul>
 				<p>
 					<img border="0" src="images/3.7/docs-epub-generate.png">
 				</p>
@@ -240,6 +243,9 @@
 					mechanisms for unsupported file formats and multiple root files
 					within one publication.</p>
 				<p>
+                                <ul>
+                                  <li><a href="http://www.youtube.com/watch?v=E0uZv7e4mYc" target="_new">Watch a video</a>
+                                </ul>
 					<img border="0" src="images/3.7/docs-epub-ant-task.png">
 				</p>
 				<p align="left">
