--- a/new/new.html
+++ b/new/new.html
@@ -12,6 +12,24 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#E0D0E6"><font size="1">3.8<br>
+		<i>June 27, 2012</i></font></td>
+		<td bgcolor="#E0D0E6" align="center">
+		<a href="/mylyn/doc/plan-3.8.html">
+		<font size="1">88</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">Benjamin Muskalla contributed several API improvements for the Tasks framework. Additional contributions were provided by Robert Munteanu, Manuel Doninger, Lucas Panjer and Sebastien Dubois.
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.8">Mylyn 3.8</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.0">Mylyn Builds 1.0</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.8">Mylyn Commons 3.8</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.8">Mylyn Context 3.8</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.7">Mylyn Docs 1.7</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=1.0">Mylyn Reviews 1.0</a>.
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.8">Mylyn Tasks 3.8</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.0">Mylyn Versions 1.0</a>.
+		</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.7.1<br>
 		<i>April 25, 2012</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
@@ -29,12 +47,12 @@
 		</font></td>
 	</tr>
 	<tr>
-		<td bgcolor="#E0D0E6"><font size="1">3.7<br>
+		<td bgcolor="#FAF7FB"><font size="1">3.7<br>
 		<i>March 21,&nbsp;2012</i></font></td>
-		<td bgcolor="#E0D0E6" align="center">
+		<td bgcolor="#FAF7FB" align="center">
 		<a href="/mylyn/doc/plan-3.7.html">
 		<font size="1">341</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">Kevin Sawicki contributed several UI enhancements for the Gerrit and Hudson connectors and Torkild U. Resheim provided Wiki markup to EPUB conversion support. 
+		<td bgcolor="#FAF7FB"><font size="1">Kevin Sawicki contributed several UI enhancements for the Gerrit and Hudson connectors and Torkild U. Resheim provided Wiki markup to EPUB conversion support. 
 		Additional contributions were provided by Manuel Doninger, Robert Munteanu, Thomas Ehrnhoefer, Tomasz Zarna, Abner Ballardo, Jan Mauersberger, Nicolas Bros, Igor Malinin, John Arthorne, Patrick Boisclair, Mike Wu, 
 		Maarten Meijer and Christian Trutz.
 			<br>Includes: 
@@ -63,7 +81,7 @@
 
 <hr size="1"/>
 
-<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.7</span></p>
+<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.8</span></p>
 
 <ul>
 	<li><a href="#task-list">Task List</a></li>
@@ -76,10 +94,11 @@
 	<li><a href="#trac">Trac Connector</a></li>
 	<li><a href="#gerrit">Gerrit Connector</a></li>
 	<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
+	<li><a href="#subclipse">Subclipse Connector</a></li>
 	<li><a href="#framework">Framework and API</a></li>
 </ul>
  
-<p>Mylyn 3.7 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=348440"><b>Eclipse 3.6 or later</b></a>. See the <a href="/mylyn/downloads/">download page</a> for repository locations.</p>
+<p>Mylyn 3.8 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=376210" target="_new"><b>Eclipse 3.7 or later</b></a>. See the <a href="/mylyn/downloads/">download page</a> for repository locations.</p>
 
 <hr size="1"/>
 
@@ -89,7 +108,7 @@
 
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Search Index for Tasks</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -118,7 +137,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Open Multiple Tasks</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -142,7 +161,8 @@
 					The filter can be toggled through the toolbar icon in the top-right
 					corner of the section header.
 				</p>
-		<p><img border="0" src="images/3.7/task-editor-filter-obsolete-attachments.png"></p>
+		<p align="left">Additionally, the toolbar of the Attachments section shows an icon for quick capturing of screen shots.</p>
+		<p><img border="0" src="images/3.8/task-editor-attach.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -151,7 +171,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Reordered Sections</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -165,7 +185,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Incremental Find</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -195,12 +215,9 @@
 					markup file and select <i>WikiText > Generate EPUB</i> in order to
 					start the wizard.
 				</p>
-				<p>
-					The EPUB feature is <b>only available from the Mylyn
-						Docs <a
-						href="http://wiki.eclipse.org/Mylyn/Repositories#Mylyn_Docs_p2_Repositories"
-						target="_new">nightly repository</a> </b>.
-				</p>
+                                <ul>
+                                  <li><a href="http://www.youtube.com/watch?v=kdcDMmx2ohY" target="_new">Watch a video</a>
+                                </ul>
 				<p>
 					<img border="0" src="images/3.7/docs-epub-generate.png">
 				</p>
@@ -226,12 +243,9 @@
 					mechanisms for unsupported file formats and multiple root files
 					within one publication.</p>
 				<p>
-					The EPUB feature is <b>only available from the Mylyn
-						Docs <a
-						href="http://wiki.eclipse.org/Mylyn/Repositories#Mylyn_Docs_p2_Repositories"
-						target="_new">nightly repository</a> </b>.
-				</p>
-				<p>
+                                <ul>
+                                  <li><a href="http://www.youtube.com/watch?v=E0uZv7e4mYc" target="_new">Watch a video</a>
+                                </ul>
 					<img border="0" src="images/3.7/docs-epub-ant-task.png">
 				</p>
 				<p align="left">
@@ -250,7 +264,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Support for Creole Markup</b></p>
 		</td>
 			<td valign="top" width="85%">
@@ -272,7 +286,7 @@
 
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Improved Content Assist</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -286,7 +300,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>User Matching</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -300,11 +314,24 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Custom Priority Levels</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Custom priority levels are mapped to P1-P5 priority levels in the <i>Task List</i>.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
+		<p align="right"><b>Bugzilla 4.2</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Bugzilla 4.2 is supported.</p>
 		</td>
 	</tr>
 </table>
@@ -315,7 +342,7 @@
 
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Streamlined Search and Query Page</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -333,6 +360,19 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit 2.3 and Gerrit 2.4</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Gerrit 2.3 and 2.4 are supported.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Compare Patch Sets</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -350,12 +390,12 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Import Git Repositories</b></p>
 		</td>
 		<td valign="top" width="85%">
 			<p align="left">EGit provides an import	wizard (<i>File &gt; Import &gt; Projects from Git</i>)
-					for importing of project from Git repositories. When a Gerrit server has been configured the wizard provies a
+					for importing of project from Git repositories. When a Gerrit server has been configured the wizard provides a
 					listing of all Git repositories from that server. This enables simple cloning and importing of available projects.
 				</p>
 			<p>
@@ -368,7 +408,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Hyperlinking for Change IDs</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -384,7 +424,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Hyperlinking for Link Patterns</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -400,7 +440,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Custom Queries</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -414,7 +454,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>OpenID Authentication</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -430,7 +470,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Repository Creation on Fetch</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -444,7 +484,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Author Information for Patch Sets</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -461,6 +501,33 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Refresh on View Activation</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When the Builds is focused it automatically refreshes. This is particularly useful when the view is hidden or in fast-view by default. Refreshing can be controlled through a preference.
+		<p><img border="0" src="images/3.8/builds-refresh-on-focus.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson 3.0</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Hudson 3.0M2 is supported</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Hierarchical View of Artifacts</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -474,7 +541,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Links Open in Builds Editor</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -495,7 +562,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Authentication Improvements</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -508,6 +575,19 @@
 	</tr>
 </table>
 
+<p>&nbsp;</p>
+<h2><a name="subclipse">Subclipse Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" width="100%">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Subclipse Connector</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Subclipse Connector which provides change set integration for builds and code reviews is now available from the main repository. 
+		</td>
+	</tr>
+</table>
 
 <p>&nbsp;</p>
 <h2><a name="framework">Framework and API</a></h2>
@@ -517,6 +597,19 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Tasks: Generic Client Manager</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The <code>RepositoryClientManager</code> class that is now available as API and can be reused by connectors: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=375076" target="_new">bug 375076</a>.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Commons: Restructuring and Deprecation</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -530,7 +623,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Commons: URL Handler</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -547,7 +640,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Commons: Improved Authentication APIs</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -560,7 +653,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Commons: HttpCore Based Transport Layer</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -574,7 +667,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Docs: API for creating Wiki markup</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -587,7 +680,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Incubator: Query API for Desktop Search</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -600,7 +693,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Tasks: Improved Query Page API</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -614,7 +707,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Tasks: Task Activation Listener Extension Point</b></p>
 		</td>
 		<td valign="top" width="85%">
