--- a/builds/description.html
+++ b/builds/description.html
@@ -1,5 +1,7 @@
-<p><b><a href="/mylyn/builds/">Mylyn Builds</a></b></p>
 <p>Integration of continuous integration and build systems and
-seamless access to software build and assembly technologies. Mylyn users
-will be able to access continuous integration processes, control build
-execution and associate build results with tasks and context.</p>
+seamless access to software build and assembly technologies. Mylyn
+users will be able to access continuous integration processes, control
+build execution and associate build results with tasks and
+context.</p>
+
+<p><img src="builds.png" alt="Mylyn Builds Screenshot"></p>
