NEW - bug 347548: revamp website to reflect project restructuring https://bugs.eclipse.org/bugs/show_bug.cgi?id=347548

--- a/builds/description.html
+++ b/builds/description.html
@@ -4,4 +4,4 @@ users will be able to access continuous integration processes, control
 build execution and associate build results with tasks and
 context.</p>
 
-<p><img src="builds.png" alt="Mylyn Builds Screenshot"></p>
+<p><img src="/mylyn/builds/builds.png" alt="Mylyn Builds Screenshot"></p>
