NEW - bug 385722: [release] plan Mylyn 3.8.1 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=385722

--- a/new/new.html
+++ b/new/new.html
@@ -12,11 +12,11 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
-		<td bgcolor="#E0D0E6"><font size="1">3.8.1<br>
+		<td bgcolor="#FAF7FB"><font size="1">3.8.1<br>
 		<i>July 27, 2012</i></font></td>
-		<td bgcolor="#E0D0E6" align="center">
+		<td bgcolor="#FAF7FB" align="center">
 		<font size="1">13</font><br><font size="1">bugs</font></td>
-		<td bgcolor="#E0D0E6"><font size="1">Service Release
+		<td bgcolor="#FAF7FB"><font size="1">Service Release
 			<br>Includes: 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.8.1">Mylyn 3.8.1</a>, 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.0.1">Mylyn Builds 1.0.1</a>, 
