354513: use data driven websites for sub-projects
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=354513

--- a/commons/description.html
+++ b/commons/description.html
@@ -1,1 +1,3 @@
-The scope of this project is to provide a framework of common UI, web service, REST and test utilities to be used by the rest of Mylyn and by other Eclipse-based tools.
+<p>The scope of this project is to provide a framework of common UI,
+	web service, REST and test utilities to be used by the rest of Mylyn
+	and by other Eclipse-based tools.</p>
