--- a/context/description.html
+++ b/context/description.html
@@ -1,1 +1,5 @@
-Usage monitoring, degree-of-interested modeling and the task-focused user extensions implementation for the Eclipse UI, which re-aligns the user experience around tasks and provides features such as workspace focusing and one-click multitasking.
+<p>The Mylyn Context project provides usage monitoring,
+	degree-of-interested modeling and the task-focused user extensions
+	implementation for the Eclipse UI, which re-aligns the user experience
+	around tasks and provides features such as workspace focusing and
+	one-click multitasking.</p>
