--- a/versions/description.html
+++ b/versions/description.html
@@ -1,1 +1,3 @@
-Eclipse integration for source code and configuration management tools and bi-directional linking to change management tools. This project and APIs it provides builds on the existing Eclipse Team APIs.
+<p>Eclipse integration for source code and configuration management
+	tools and bi-directional linking to change management tools. This
+	project and APIs it provides builds on the existing Eclipse Team APIs.</p>
