--- a/incubator/description.html
+++ b/incubator/description.html
@@ -1,1 +1,1 @@
-New development in areas that are relevant to the Mylyn sub-projects.
+<p>New development in areas that are relevant to the Mylyn sub-projects.</p>
