--- a/new/new.html
+++ b/new/new.html
@@ -12,6 +12,23 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.8.2<br>
+		<i>September 28, 2012</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">18</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service Release
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.8.2">Mylyn 3.8.2</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.0.2">Mylyn Builds 1.0.2</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.8.2">Mylyn Commons 3.8.2</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.8.2">Mylyn Context 3.8.2</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.7.2">Mylyn Docs 1.7.2</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=1.0.2">Mylyn Reviews 1.0.2</a>.
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.8.2">Mylyn Tasks 3.8.2</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.0.2">Mylyn Versions 1.0.2</a>.
+		</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.8.1<br>
 		<i>July 27, 2012</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
