336131: update weekly New & Noteworthy
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -15,7 +15,6 @@
 
 <hr size="1"/>
 
-No builds have been published, yet. Stay tuned.
 <!-- 
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
@@ -24,7 +23,7 @@ No builds have been published, yet. Stay tuned.
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">...</p>
-		<p><img border="0" src="images/3.8/...png"></p>
+		<p><img border="0" src="images/3.9/...png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -34,6 +33,114 @@ No builds have been published, yet. Stay tuned.
 	</tr>
 </table>
  -->
+ 
+<table cellpadding="10" cellspacing="0" width="100%">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Review Navigator</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Review navigator provides a view of all comments in a review.</p>
+		<p><img border="0" src="images/3.9/review-navigator.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Replies to Review Comments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Review editor supports replying to global review comments.</p>
+		<p><img border="0" src="images/3.9/review-editor-reply.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Review Comment Spell Checking</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">New comments for reviews and submissions now get automatic spell checking.</p>
+		<p><img border="0" src="images/3.9/review-comments-spell-checking.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Rebase for Gerrit Reviews</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">A rebase button is now available in the review editor when Gerrit 2.4 or later is used.</p>
+		<p><img border="0" src="images/3.9/review-editor-rebase.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Auto Expand Sections</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When clicking hyperlinks that point to a specific patch set such as <code>https://git.eclipse.org/r/#/c/10057/4</code> the corresponding section 
+		in the Review editor is automatically expanded. Also, the Reviewers section is now always expanded.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit My Changes Query</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Completed reviews are now included in the <i>My Changes</i> query for Gerrit.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit 2.5</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Gerrit 2.5 is supported. Support for Gerrit 2.6 is still work in progress (see <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=395059">bug 395059</a>).</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Team Repositories View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Team Repositories view supports user defined categories: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=335790">bug 335790</a>
+		</p>
+		</td>
+	</tr>
+</table>
  
 </body>
 </html>
