336131: update weekly New & Noteworthy
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -37,6 +37,124 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Copy URL for Comments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The drop down for task comments now support copying the URL to reference a particular comment.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Local Files Shown in Review Compare View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When a file is opened from the review editor navigation and editing are available when a revision matches the local workspace.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson 3.0</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Hudson 3.0 and 3.0.1 are now supported.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Markdown</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">WikiText now has support for Markdown markup.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>WikiText Dependencies</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The WikiText dependency on Mylyn Context has been split out to a separate bundle to enable integrators to consume WikiText tasks integration without pulling in the Task-focused Interface..</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Delete Trac Tasks</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The delete task prompt now has the option to delete repository tasks enabled for Trac repositories.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Tasks: Category IDs published as API</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left"><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=387710">bug 387710</a>: The IDs of categories of the Task Repositories view are now published as API.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Review Compare View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The order in which changes are shown has been reversed. The new contents is now shown on the right hand side to match the Gerrit web UI and the standard workflow in Eclipse.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Review Navigator</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Review navigator provides a view of all comments in a review.</p>
+		<p><img border="0" src="images/3.9/review-navigator.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Review Navigator</b></p>
 		</td>
 		<td valign="top" width="85%">
