--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -80,6 +80,12 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">WikiText now has support for Markdown markup.</p>
+				<p>
+					Markdown support is part of the WikiText Extras feature and <b>only
+						available from the Mylyn Docs <a
+						href="http://wiki.eclipse.org/Mylyn/Repositories#Mylyn_Docs_p2_Repositories"
+						target="_new">nightly repository</a> </b>.
+				</p>
 		</td>
 	</tr>
 	<tr>
