405022: [release] plan Mylyn 3.8.4 release
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=405022

--- a/new/new.html
+++ b/new/new.html
@@ -12,6 +12,23 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.8.4<br>
+		<i>May 8, 2013</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">21</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service Release
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.8.4">Mylyn 3.8.4</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.0.4">Mylyn Builds 1.0.4</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.8.4">Mylyn Commons 3.8.4</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.8.4">Mylyn Context 3.8.4</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.7.4">Mylyn Docs 1.7.4</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=1.0.4">Mylyn Reviews 1.0.4</a>.
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.8.4">Mylyn Tasks 3.8.4</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.0.4">Mylyn Versions 1.0.4</a>.
+		</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.8.3<br>
 		<i>March 1, 2013</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
