--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,39 +1,93 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<h2>DRAFT</h2>
+<table border="1" style="border-collapse: collapse" width="100%" cellpadding="4" bordercolor="#FFFFFF">
+	<tr>
+		<td bgcolor="#595791" width="7%" align="center"><b>
+		<font color="#FFFFFF" size="1">Release</font></b></td>
+		<td bgcolor="#595791" width="5%" align="center"><b>
+		<font color="#FFFFFF" size="1">Resolved 
+		</font></b></td>
+		<td bgcolor="#595791" width="*" align="center"><b>
+		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
+	</tr>
+	<tr>
+		<td bgcolor="#E0D0E6"><font size="1">3.9<br>
+		<i>June 26, 2013</i></font></td>
+		<td bgcolor="#E0D0E6" align="center">
+		<a href="/mylyn/doc/plan-3.9.html">
+		<font size="1">88</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">Benjamin Muskalla contributed several API improvements for the Tasks framework. Additional contributions were provided by Robert Munteanu, Manuel Doninger, Lucas Panjer and Sebastien Dubois.
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.9">Mylyn 3.9</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.1">Mylyn Builds 1.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.9">Mylyn Commons 3.9</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.9">Mylyn Context 3.9</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.8.0">Mylyn Docs 1.8</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.0">Mylyn Reviews 2.0</a>.
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.9">Mylyn Tasks 3.9</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.1">Mylyn Versions 1.1</a>.
+		</font></td>
+	</tr>
+</table>
 
-<p><b>Also see the <a href="http://eclipse.org/mylyn/new/">New &amp; Noteworthy</a> for the latest release.</b></p> 
-
-<p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 before installing Mylyn 3.9.</p>
+<p><b>Also see the New &amp; Noteworthy for: 
+<a href="http://eclipse.org/mylyn/new/new-3.8.html">Mylyn 3.8</a>, 
+<a href="http://eclipse.org/mylyn/new/new-3.6.html">Mylyn 3.6</a>, 
+<a href="http://eclipse.org/mylyn/new/new-3.4.html">Mylyn 3.4</a>, 
+<a href="http://eclipse.org/mylyn/new/new-3.2.html">Mylyn 3.2</a>, 
+<a href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, 
+<a href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, 
+<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, 
+<a href="http://eclipse.org/mylyn/new/new-0.5.html">Mylyn 0.5</a>, 
+<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, 
+<a href="http://eclipse.org/mylyn/new/new-0.3.html">Mylyn 0.3</a></b></p>
 
 <hr size="1"/>
 
-<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.9 Snapshot Builds</span></p>
+<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.9</span></p>
+
+<ul>
+	<li><a href="#task-list">Task List</a></li>
+	<li><a href="#task-editor">Task Editor</a></li>
+	<!-- 
+	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
+	-->
+	<li><a href="#wikitext">WikiText</a></li>
+	<li><a href="#trac">Trac Connector</a></li>
+	<li><a href="#gerrit">Gerrit Connector</a></li>
+	<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
+	<li><a href="#framework">Framework and API</a></li>
+</ul>
  
-<p>Mylyn 3.9 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=348440"><b>Eclipse 3.8 or later</b></a>. See the <a href="/mylyn/downloads/">download page</a> for repository locations.</p>
-
+<p><b>NOTE:</b> Mylyn 3.9 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907" target="_new"><b>Java 1.6 or later</b></a> and
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383916" target="_new"><b>Eclipse 3.8 or later</b></a>. See the <a href="/mylyn/downloads/">download page</a> for repository locations.</p>
 <hr size="1"/>
 
-<!-- 
+<p>&nbsp;</p>
+<h2><a name="task-list">Task List</a></h2>
+
+
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>...</b></p>
+		<p align="right"><b>Hiding of Subtasks</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">...</p>
-		<p><img border="0" src="images/3.9/...png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
+			<p align="left">
+				On first start.....
+			</p>
+			<p>
+				<img border="0" src="images/3.9/task-list-subtask-notification.png" />
+			</p>
 		</td>
 	</tr>
 </table>
- -->
- 
+
+
+<p>&nbsp;</p>
+<h2><a name="task-editor">Task Editor</a></h2>
+
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
@@ -43,37 +97,13 @@
 		<p align="left">The drop down for task comments now support copying the URL to reference a particular comment.</p>
 		</td>
 	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Local Files Shown in Review Compare View</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">When a file is opened from the review editor navigation and editing are available when a revision matches the local workspace.</p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Hudson 3.0</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">Hudson 3.0 and 3.0.1 are now supported.</p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
-		</td>
-	</tr>
+</table>
+
+
+<p>&nbsp;</p>
+<h2><a name="wikitext">WikiText</a></h2>
+
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Markdown</b></p>
@@ -101,11 +131,28 @@
 		<p align="left">The WikiText dependency on Mylyn Context has been split out to a separate bundle to enable integrators to consume WikiText tasks integration without pulling in the Task-focused Interface..</p>
 		</td>
 	</tr>
+</table>
+
+
+<p>&nbsp;</p>
+<h2><a name="bugzilla">Bugzilla Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
-		<td colspan="2">
-		<hr size="1"/>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla 4.4</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Bugzila 4.4 is now supported.</p>
 		</td>
 	</tr>
+</table>
+
+
+<p>&nbsp;</p>
+<h2><a name="trac">Trac Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Delete Trac Tasks</b></p>
@@ -114,17 +161,20 @@
 		<p align="left">The delete task prompt now has the option to delete repository tasks enabled for Trac repositories.</p>
 		</td>
 	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
-		</td>
-	</tr>
+</table>
+
+
+<p>&nbsp;</p>
+<h2><a name="gerrit">Gerrit Connector</a></h2>
+
+
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Tasks: Category IDs published as API</b></p>
+		<p align="right"><b>Local Files Shown in Review Compare View</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left"><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=387710">bug 387710</a>: The IDs of categories of the Task Repositories view are now published as API.</p>
+		<p align="left">When a file is opened from the review editor navigation and editing are available when a revision matches the local workspace.</p>
 		</td>
 	</tr>
 	<tr>
@@ -138,20 +188,6 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The order in which changes are shown has been reversed. The new contents is now shown on the right hand side to match the Gerrit web UI and the standard workflow in Eclipse.</p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Review Navigator</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The Review navigator provides a view of all comments in a review.</p>
-		<p><img border="0" src="images/3.9/review-navigator.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -250,6 +286,39 @@
 		<p align="left">Gerrit 2.5 is supported. Support for Gerrit 2.6 is still work in progress (see <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=395059">bug 395059</a>).</p>
 		</td>
 	</tr>
+
+</table>
+
+
+<p>&nbsp;</p>
+<h2><a name="hudson">Hudson/Jenkins Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" width="100%">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson 3.0</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Hudson 3.0 and 3.0.1 are now supported.</p>
+		</td>
+	</tr>
+</table>
+
+<p>&nbsp;</p>
+<h2><a name="framework">Framework and API</a></h2>
+
+<p>See <a href="http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.9" target="_new">porting guide</a> for additional notes on API changes.</p>
+
+<table cellpadding="10" cellspacing="0" width="100%">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Commons: Team Repositories View Categories</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Team Repositories view supports user defined categories: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=335790">bug 335790</a>
+		</p>
+		</td>
+	</tr>
 	<tr>
 		<td colspan="2">
 		<hr size="1"/>
@@ -257,14 +326,13 @@
 	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Team Repositories View</b></p>
+		<p align="right"><b>Tasks: Category IDs published as API</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The Team Repositories view supports user defined categories: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=335790">bug 335790</a>
-		</p>
+		<p align="left"><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=387710">bug 387710</a>: The IDs of categories of the Task Repositories view are now published as API.</p>
 		</td>
 	</tr>
 </table>
- 
+
 </body>
 </html>
