383911: update New & Noteworthy for Mylyn 3.9
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=383911

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -16,8 +16,8 @@
 		<i>June 26, 2013</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="/mylyn/doc/plan-3.9.html">
-		<font size="1">88</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">Benjamin Muskalla contributed several API improvements for the Tasks framework. Additional contributions were provided by Robert Munteanu, Manuel Doninger, Lucas Panjer and Sebastien Dubois.
+		<font size="1">254</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">Sebastian Schmidt and Timur Achmetow provided several enhancements as part of Sumer of Code. Jeremie Bresson contributed numerous improvements and fixes for MediaWiki markup. Additional contributions were provided by Benjamin Muskalla, Tomasz Zarna, Stefan Seelmann, Krzysztof Daniel, Lei Zhu and Lucas Panjer.
 			<br>Includes: 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.9">Mylyn 3.9</a>, 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.1">Mylyn Builds 1.1</a>, 
@@ -75,7 +75,7 @@
 		</td>
 		<td valign="top" width="85%">
 			<p align="left">
-				On first start.....
+				On first start the Task List suggests to filter subtasks not matched by queries. This helps to reduce incoming notifications for subtasks that are not matched by the query.
 			</p>
 			<p>
 				<img border="0" src="images/3.9/task-list-subtask-notification.png" />
@@ -94,7 +94,10 @@
 		<p align="right"><b>Copy URL for Comments</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The drop down for task comments now support copying the URL to reference a particular comment.</p>
+			<p align="left">The drop down for task comments now support copying the URL to reference a particular comment.</p>
+			<p>
+				<img border="0" src="images/3.9/task-editor-copy-comment-url.png" />
+			</p>
 		</td>
 	</tr>
 </table>
@@ -128,7 +131,10 @@
 		<p align="right"><b>WikiText Dependencies</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The WikiText dependency on Mylyn Context has been split out to a separate bundle to enable integrators to consume WikiText tasks integration without pulling in the Task-focused Interface..</p>
+			<p align="left">The WikiText dependency on Mylyn Context has been split out to a separate bundle to enable integrators to consume WikiText tasks integration without pulling in the Task-focused Interface..</p>
+			<p>
+				<img border="0" src="images/3.9/wikitext-context-ui-dependencies.png" />
+			</p>
 		</td>
 	</tr>
 </table>
@@ -158,7 +164,10 @@
 		<p align="right"><b>Delete Trac Tasks</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The delete task prompt now has the option to delete repository tasks enabled for Trac repositories.</p>
+			<p align="left">The delete task prompt now has the option to delete repository tasks enabled for Trac repositories.</p>
+			<p>
+				<img border="0" src="images/3.9/trac-delete-tasks.png" />
+			</p>			
 		</td>
 	</tr>
 </table>
