--- a/new/new.html
+++ b/new/new.html
@@ -12,6 +12,23 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.9.1<br>
+		<i>Sep 27, 2013</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">48</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service Release
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.9.1">Mylyn 3.9.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.1.1">Mylyn Builds 1.1.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.9.1">Mylyn Commons 3.9.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.9.1">Mylyn Context 3.9.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.8.1">Mylyn Docs 1.8.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.0.1">Mylyn Reviews 2.0.1</a>.
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.9.1">Mylyn Tasks 3.9.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.1.1">Mylyn Versions 1.1.1</a>.
+		</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#E0D0E6"><font size="1">3.9<br>
 		<i>June 26, 2013</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
