415824: [release] plan Mylyn 3.9.2 release
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=415824

--- a/new/new-3.9.html
+++ b/new/new-3.9.html
@@ -12,6 +12,22 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.9.2<br>
+		<i>Feb 28, 2014</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">12</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service Release
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.9.2">Mylyn 3.9.2</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.1.2">Mylyn Builds 1.1.2</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.9.2">Mylyn Commons 3.9.2</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.9.2">Mylyn Context 3.9.2</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.8.2">Mylyn Docs 1.8.2</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.0.2">Mylyn Reviews 2.0.2</a>.
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.9.2">Mylyn Tasks 3.9.2</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.1.2">Mylyn Versions 1.1.2</a>.
+		</font></td>
+	</tr>	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.9.1<br>
 		<i>Sep 27, 2013</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
